--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -6,6 +6,7 @@
 
 
 %todo
+% %(in)consistent
 % precedences of operators. 'bridge' binds weakest
 % explain: extensions for small additions, unions for sums of large OMS
 % %safe as synonym for %cons
